# agent-orchestrated-etl

./: .bandit.yml  .dockerignore  .editorconfig  .env.example  .env.production.template  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .releaserc.json  .releaserc.yml  .ruff.toml  .secrets.baseline  .security.yml  =3.8.0  =5.9.0  ADVANCED_SDLC_OPTIMIZATION_REPORT.md  ARCHITECTURE.md  AUTONOMOUS_RESEARCH_BREAKTHROUGH_PUBLICATION.md  AUTONOMOUS_RESEARCH_COMPLETE.md  AUTONOMOUS_RESEARCH_GENERATION5_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  AUTONOMOUS_SDLC_GENERATION3_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_GENERATION4_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_OPTIMIZATION_ASSESSMENT.md  AUTONOMOUS_SDLC_PROGRESSIVE_QUALITY_GATES_COMPLETION.md  AUTONOMOUS_SDLC_RESEARCH_PUBLICATION.md  AWS_SECRETS_MANAGER_GUIDE.md  BACKLOG.md  CHANGELOG.md  CODEBASE_OVERVIEW.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  (+123 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  security-vulnerability.md
.github/workflows/: README.md  ci.yml  dependency-update.yml  maintenance.yml  release.yml  security.yml
DOCS/: backlog.yml
aiops/: README.md  intelligent-model-management.py
automation/: cost-optimization.py  dependency-management.py  intelligent-deployment.py  intelligent-scaling.py
chaos-engineering/: chaos-experiments.yaml  chaos-runner.py
compliance/: advanced-compliance-engine.py  advanced-governance-automation.py
config/: production.json  production_deployment.yaml  test_quality_gates.json
data/: pipeline.yaml  sample_employees.csv
deployment/: autonomous_sdlc_deployment.yaml  intelligent-deployment-orchestrator.py  production_setup.sh
docker/: Dockerfile  docker-compose.yml
docs/: AUTONOMOUS_SDLC_COMPLETION_REPORT.md  DEVELOPMENT.md  ENHANCED_ARCHITECTURE.md  RELEASE_PROCESS.md  ROADMAP.md  SETUP_REQUIRED.md  cicd-requirements.md  dependency-management.md  gen_ref_pages.py  index.md
docs/adr/: 0001-agent-based-architecture.md  0002-security-first-design.md  001-agent-framework-selection.md  002-workflow-engine-choice.md  003-configuration-management.md  004-monitoring-approach.md  005-security-architecture.md  README.md  template.md
docs/api/: agents.md  api-reference.md  coordination.md  openapi.yml  tools.md
docs/architecture/: agent-interactions.md  system-overview.md
docs/deployment/: README.md  deployment-guide.md  production-deployment.md  production-optimization.md
docs/developer/: code-quality-standards.md  onboarding.md
docs/guides/: quick-start.md  troubleshooting.md
docs/innovation/: ai-ops-integration.md  emerging-tech-evaluation.md
docs/operations/: troubleshooting.md
docs/runbooks/: application-down.md
docs/security/: README.md  security-policy.md  sql-injection-prevention.md
docs/status/: autonomous-backlog-completion-report.md  autonomous-backlog-session-2025-07-26.md  autonomous-execution-cycle-1-report.md  autonomous-execution-cycle-2-report.md  autonomous-execution-cycle-3-report.md  autonomous-execution-cycle-4-report.md  backlog-status-assessment.md  etl-011-completion-report.md  etl-012-completion-report.md  etl-013-completion-report.md  etl-015-completion-report.md
docs/testing/: README.md
docs/workflows/: GITHUB_ACTIONS_SETUP.md  PRODUCTION_WORKFLOWS.md  README.md  SETUP_INSTRUCTIONS.md
examples/: advanced_pipeline_orchestration.py  demo_pipeline.py  research_implementations.py
github-workflows-to-add/: README.md  cd.yml
infrastructure/kubernetes/: deployment.yaml  namespace.yaml
infrastructure/terraform/: main.tf  variables.tf
k8s/: deployment.yaml
kubernetes/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
monitoring/: alert_rules.yml  prometheus.yml
observability/: intelligent-observability-platform.py  opentelemetry-config.yaml  sli-slo-config.yaml  tracing-config.yaml
optimization/: intelligent-resource-management.py
performance/: benchmark-suite.py  intelligent-optimization-engine.py
performance-reports/: performance-benchmark-20250821_061732.json
reports/: comprehensive_quality_validation.json
research_env/: pyvenv.cfg
scripts/: build.sh  generate_sbom.py  generate_tests.py  init-db.sql  performance_benchmark.py  vulnerability_scanner.py
security-reports/: security-report-20250821_061737.json  security-summary-20250821_061737.json
src/agent_orchestrated_etl/: __init__.py  adaptive_circuit_breaker.py  adaptive_performance_cache.py  adaptive_pipeline_rl.py  adaptive_resources.py  ai_resource_allocation.py  (+79 more)
terraform/: main.tf
tests/: conftest.py  sprint_acceptance_criteria.json  test_add_cli_command_generate_dag.py  test_agents.py  test_api.py  test_autonomous_integration.py  test_aws_secrets_integration.py  test_config.py  test_database.py  test_database_extraction.py  test_design_data_source_analysis_module.py  test_enhanced_agent_selection.py  test_enhanced_features.py  test_error_handling.py  test_etl_017_secret_management.py  test_etl_core.py  test_etl_data_profiling.py  test_etl_file_extraction.py  test_generate_airflow_dag_from_metadata.py  test_global_features.py  test_intelligent_pipeline_detector.py  test_monitor_agent.py  test_monitor_agent_enhancements.py  test_orchestrator.py  test_orchestrator_recovery_strategies.py  test_pipeline_execution.py  test_primary_data_extraction_logic.py  test_query_data_tool.py  test_run_pipeline_cli.py  test_s3_data_analysis.py  test_scaffolding.py  test_sql_injection_fix.py  test_sql_injection_security.py  test_testing.py  test_transformation_logic.py  test_validation.py  test_vault_integration.py  test_vector_memory_search.py  test_workflow_routing.py  test_write_unit_tests_for_dag_generation.py
validation_results/: quick_research_validation.json
(+71 files in other folders)
