[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_orchestrated_etl"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "watchdog>=3.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "boto3>=1.26.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "sqlalchemy>=2.0.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["agent_orchestrated_etl"]

[project.scripts]
generate_dag = "agent_orchestrated_etl.cli:main"
run_pipeline = "agent_orchestrated_etl.cli:run_pipeline_cmd"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio>=0.21.0",
    "ruff==0.12.1",
    "Pygments==2.19.2",
    "pre-commit==3.7.0",
    "detect-secrets==1.4.0",
    "coverage==7.9.1",
    "radon==6.0.1",
    "bandit==1.7.10",
    "safety==3.2.9",
    "mypy==1.11.2",
    "pydocstyle==6.3.0",
    "types-PyYAML==6.0.12.20241230",
    "types-requests>=2.32.0",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "slow: mark test as slow",
    "integration: mark test as integration test",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
